--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.5"
