--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "framer-motion": "^12.10.5",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.509.0",
     "qrcode.react": "^4.2.0",
