--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.9.0",
     "framer-motion": "^12.10.5",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.509.0",
@@ -19,7 +20,10 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
